salesforce-port/force-app/main/default/objects/Expense_Comment__c/Expense_Comment__c.object-meta.xml
<CustomObject>
    <label>Expense Comment</label>
    <nameField>
        <displayFormat>CMT-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>