salesforce-port/force-app/main/default/objects/Expense_Comment__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Authored Expense Comments</relationshipLabel>
    <relationshipName>Authored_Expense_Comments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>