salesforce-port/force-app/main/default/objects/Expense_Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <required>true</required>
</CustomField>