salesforce-port/force-app/main/default/objects/Expense_Comment__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <type>Lookup</type>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>